Revamp test suite